--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,24 +45,23 @@ body{
 /* header */
 
 header{
-    height: 450px;
+    height: 650px;
 }
 
 .header-top{
     width: 100%;
-    height: 20%;
+    height: 90px;
 }
 
 #logo{
-    /* height: calc(60%); */
-    height: 60%;
+    height: 54px;
     border-right: 2px solid lightgrey;
     padding-right: 20px;
 }
 
 nav{
-    height: 40%;
-    padding-top: 10px;
+    height: 36px;
+    line-height: 36px;
 }
 
 li{
@@ -74,7 +73,28 @@ li{
 
 .jumbotron{
     width: 100%;
-    height: 80%;
+    height: 460px;
+}
+
+#jumbo-cont{
+    background-image: url(../img/banner.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 15px;
+}
+
+#primo-titolo{
+    width: 60%;
+    color: white;
+    padding: 275px 40px 0;
+    font-size: 32px;
+}
+
+#secondo-titolo{
+    width: 55%;
+    color: white;
+    font-size: 16px;
+    padding-left: 40px;
 }
 
 /* main */
@@ -108,7 +128,7 @@ footer{
 }
 
 .jumbotron .debug{
-    height: 330px;
+    height: 460px;
     background-color: gold;
 }
 
