--- a/CSS/style.css
+++ b/CSS/style.css
@@ -141,15 +141,17 @@ li{
     border-radius: 20px;
 }
 
-
-
 /* footer */
 
 footer{
     width: 100%;
     height: 50px;
+    text-align: center;
 }
 
+footer span{
+    color: red;
+}
 
 /* ***********************************debug*********************************  */
 
